--- a/view_debug.html
+++ b/view_debug.html
@@ -90,7 +90,7 @@ body { background-color: black; }
 </head>
 <body id='body' class='webgl_enabled'>
   <!-- The viewer -->
-  <input id="loadbtn" type="button" value="load"  onclick="this.style.visibility='hidden'; $.holdReady(false);" />
+  <input id="loadbtn" type="button" value="Click to load image"  onclick="this.style.visibility='hidden'; $.holdReady(false);" />
   <div id='viewer' style='display: none;'>
 
     <ul class='navigation'>
