strip hatrac ver suffix before passing to xtk (#facebase-www/640)

--- a/view_on_load.html
+++ b/view_on_load.html
@@ -48,6 +48,7 @@
 <script>
     $.holdReady(true);
 </script>
+
 <script type='text/javascript' src='js/jquery.ui.js'></script>
 <script type='text/javascript' src='js/jquery.ui.slider.js'></script>
 <script type='text/javascript' src='js/jquery.miniColors.js'></script>
@@ -62,11 +63,14 @@
 <script type='text/javascript' src='js/jquery.frontpage.js'></script>
 <script type='text/javascript' src='js/bootstrap-modal.js'></script>
 <script type='text/javascript' src='js/x.controller.js'></script>
-<script type='text/javascript' src='js/x.examples.js'></script>
 <script type='text/javascript' src='js/x.rendering.js'></script>
 <script type='text/javascript' src='js/x.scene.js'></script>
 <script type='text/javascript' src='js/x.share.js'></script>
 <script type='text/javascript' src='js/x.realtime.js'></script>
+<!-- not used (RS)
+<script type='text/javascript' src='js/x.examples.js'></script>
+-->
+
 <!-- for view_debug.html
 <script type="text/javascript" src="X/lib/google-closure-library/closure/goog/base.js"></script>
 <script type="text/javascript" src="X/xtk-deps.js"></script>
